--- a/index.html
+++ b/index.html
@@ -35,18 +35,23 @@
     <div class="recipe">
       <h2>Суп из воды с водой <span class="badge">Эконом</span></h2>
       <ul>
-        <li>Вода — 1 литр</li>
-        <li>Вода — по вкусу</li>
+        <li>Добавьте в кастрюлю:</li>
+        <li>20u воды</li>
       </ul>
-      <p>Налейте воду. Добавьте воду. Доведите до кипения воды.</p>
+      <p>Варите в течении 20 секунд при средней температуре. </p>
     </div>
 
     <div class="recipe">
       <h2>Кототортик 🐾</h2>
       <ul>
-        <li>Любовь кота</li>
-        <li>Мурчание — 200 г</li>
-        <li>Фантазия</li>
+        <li>Соедините вместе</li>
+        <li>1 Мозг</li>
+        <li>1 Сердце</li>
+        <li>1 Праздничный торт</li>
+        <li>3 Мяса</li>
+        <li>30u Крови</li>
+        <li>5u Присыпки</li>
+        <li>1u Теслий</li>
       </ul>
       <p>Не готовить. Смотреть. Умиляться. Кота не есть.</p>
     </div>
@@ -54,8 +59,11 @@
     <div class="recipe">
       <h2>Хлеб с хлебом 🍞</h2>
       <ul>
-        <li>Хлеб</li>
-        <li>Ещё хлеб</li>
+        <li>Положите на противень:</li>
+        <li>1. Добавьте 1 тесто</li>
+        <li>2. Добавьте 1 яйцо</li>
+        <li>3. Положите противень в духовку </li>
+        <li>4. Запекайте на среднем огне 10 секунд.</li>
       </ul>
       <p>Положить хлеб на хлеб. Подавать с хлебом.</p>
     </div>
